--- a/huiyi2.html
+++ b/huiyi2.html
@@ -62,9 +62,9 @@
     </p>
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
-<li class=""><a href="xqlmyaowen.html" target="_blank">要闻</a></li>
-<li class=""><a href="xqlmzhengce.html" target="_blank">政策</a></li>                
-<li class=""><a href="xqlmhuiyi.html" target="_blank">会议活动</a></li>				
+<li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
+<li class=""><a href="xqlmzhengce.html" target="_blank">企业学校动态</a></li>                
+<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>			
 </ul>
 </div>
 
@@ -72,33 +72,43 @@
 </div>
 <div class="page_xypj">
      <div id="chengli">
-        <p style="font-weight: bold; margin-bottom: 20px;font-size: 30px; ">辽宁省软件产业校企联盟产学合作协同育人高峰论坛</p>	
-        <p style="font-size: 10px; margin-bottom: 30px;">2017-06-19 10:41
+        <p style="font-weight: bold; margin-bottom: 20px;font-size: 30px; ">辽宁省软件产业校企联盟产学合作高峰论坛成功举办</p>	
+        <p style="font-size: 10px; margin-bottom: 30px;">2017-06-20 10:41
         </p>
         <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">2017年6月16日，辽宁省软件产业校企联盟产学合作协同育人高峰论坛暨第一届理事会在第十五届中国国际软件和信息服务交易会背景下隆重召开。中软国际教育集团COO李佳历女士，以及沈阳工业大学、辽宁工程技术大学、大连交通大学等院校领导与会并发表主题演讲。</p>
-        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/xinwen4.png"/></p>
+	text-indent: 2em;">2017年6月16日，辽宁省软件产业校企联盟产学合作高峰论坛暨第一届理事会第二次会议于中国国际软件和信息服务交易会期间成功举办。沈阳工业大学和东软睿道共同承办了本次论坛，来自省内高校和企业近百人参加了论坛，共同探讨产学合作、深度融合。</p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/huiyi1.jpg"/></p>
+         <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/huiyi2.jpg"/></p>
         <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">第十五届中国国际软件和信息服务交易会现场</p>
+	text-indent: 2em;">论坛主持人由校企联盟秘书长、沈阳工业大学软件学院院长牛连强教授担任。他简明扼要地向与会嘉宾介绍了辽宁省软件产业校企联盟的成立初衷。辽宁省软件产业校企联盟是由辽宁省政府主导，以促进校企深入合作、创新发展为主要任务，与学校、企业、园区、和科研院所共同参与建设的省级公益平台。</p>
+	 <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/huiyi3.jpg"/></p>
 	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">会议中，中软国际教育集团COO李佳历女士介绍分享了中软国际校企合作协同育人的历程及举措等内容。她表示：当今世界经济正处于重要变革期，以大数据、移动互联、云计算、人工智能、虚拟现实为代表的新一轮信息技术革命正在向产业渗透，这已成为全球共同关注的发展趋势。随着中国软件和信息技术产业的高速发展，新一代信息技术人才需求急剧上升，补充IT人才缺口成为当务之急，“校企合作、协同育人”是推动IT时代发展的重要之举。多年来，中软国际与高校合作办学效果显著，将继续与合作院校携手共进、开放合作、共同成长。</p>
-        <p style="margin-bottom: 20px;"><img style=" width: 100%;"
-        	src="img/xinwen/xinwen5.png"/></p>
+	text-indent: 2em;">沈阳工业大学软件学院院长牛连强教授</p>
+	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">联盟理事长、沈阳工业大学副校长袁晓光教授在论坛致辞中表示：我国当下正处在由人力资源大国向人力资源强国转变，由教育大国向教育强国转变的关键时期，如何实现各方资源的有效互补，共同致力于为行业培养、输送更多的与经济、产业发展相适应的高质量人才显得至关重要。辽宁软件产业联盟的成立就是为了充当高校与企业间的桥梁。以“合作、创新、共赢、发展”为宗旨，打造政产学研创等合作多赢的协同创新发展平台，促进企业与高校在人才链、产业链、和创新创业链的深度融合。</p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi4.jpg"/></p>
         <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">中软国际教育集团COO李佳历女士发表演讲</p>
+	text-indent: 2em;">联盟理事长、沈阳工业大学副校长袁晓光教授</p>
 	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">中软国际目前已在全国26个城市建成40个实训基地，与600余所高等院校建立了长期广泛的合作关系，多年来始终致力于通过全球领先的创新科技和最佳实践，为各合作高校提供内容丰富、理念先进且贴合实践的教学资源支持。中软国际校企合作做到了有针对性地培养人才，是注重培养质量，注重学校与企业资源、信息共享的“双赢” 模式。在辽宁省软件产业校企合作联盟的推动下，中软国际将继续与各合作高校紧密携手，共同为新一代信息技术卓越人才培养贡献更大力量！</p>
+	text-indent: 2em;">辽宁工程技术大学软件学院院长刘万军教授、大连交通大学软件学院院长黄明教授分别从不同的角度出发，提出了产学合作是高校转型发展的机遇。高校可以按照企业需求设置专业方向、与企业共同制定人才培养方案，同时高校老师与企业项目经理可以共同实施教学。这些措施不但解决了高校实践教学资源与实践师资严重不足的矛盾，还能解决学生实践教学中校企合作衔接不畅、学生培养与产业需求贴合不够紧密的矛盾。只有这样，高校才能走出一条促进产业链、学科链、人才链协调发展的校企合作新路子。</p>
+	 <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi5.jpg"/></p>
 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">2017第十五届中国国际软件和信息服务交易会（大连软交会）</p>
+	text-indent: 2em;">辽宁工程技术大学软件学院院长刘万军教授</p>
+	 <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi6.jpg"/></p>
 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">作为中国唯一的国家级软件交易会——中国软交会经过15年的发展和积淀，其权威性、国际化、专业化、实效性得到了业界的广泛认可，已成为海内外业界公认的软件产业年度盛会。</p>
+	text-indent: 2em;">大连交通大学软件学院院长黄明教授</p>
 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">本届中国软交会主题为“新IT、新生态、新动能”，场地规模达3万平方米，国内外参展厂商超过750家，海内外参展观摩团组超过100个，同期将举办会议论坛活动50余场，邀请高端演讲嘉宾近千位，行业采购客商预计达1.5万人，参观观众3万余名。有20个国家和地区的团组、25家世界500强企业参展，海外参展企业数量超过150家。通过欧美工商会、俄罗斯莫斯科州工商会、中以基金、硅谷创业者联盟等49家海外合作机构，邀请到十几个国家的商务参赞亲临展会，3000余位海外客商参会，国际观摩团组将覆盖60个国家和地区。</p>
+	text-indent: 2em;">校企合作架设两端，一端是IT人才的供给方，一方是IT人才的需求方。东软控股副总副、东软睿道总裁李印杲老师作为企业代表分享了东软睿道“产教融合 协同育人”的历程及举措。</p>
+	 <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi7.jpg"/></p>
 	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">历经十五年的要素积淀，中国软交会将继续专注于提升国际化、专业化、交易性，持续打造中国第一的软件交易平台。</p>
-
-
-        
+	text-indent: 2em;">东软控股副总裁、东软睿道总裁李印杲老师</p>
+	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">李老师在演讲中提到东软睿道刚刚在上午的中国软交会“产业融入教育”论坛上发布了2017全新的四大人才培养方案，分别为大数据、汽车电子、网络安全、跨境电商。这四大方向都是依托东软二十余年的产业积累，将东软一线的实践经验融入到东软睿道的IT教育中。未来，东软睿道将协同学校逐步建立和完善校企共建、产学结合的人才培养模式；培养学生通过实践项目的参与和创新，实现就业和创业的有效通道；为企业提供适应产业发展需要的应用型、复合型、创新型人才。</p>
+    <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi8.jpg"/></p>
+	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">论坛最后，辽宁省软件产业校企联盟召开了第一届理事会第二次会议。会上来自政产学研的专家纷纷表示“校企合作”已经成为产业与教育发展的大趋势，联盟应该充分整合优质的产业资源与教育资源，更加积极地携手探索“产学合作 协同育人”的新模式、新思想。</p>
+     <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi9.jpg"/></p>
+      <p style="margin-bottom: 20px;"><img style=" width: 100%;"src="img/xinwen/huiyi10.jpg"/></p>   
         
          </div>
 </div>    
