--- a/qiyehuodong3.html
+++ b/qiyehuodong3.html
@@ -72,18 +72,32 @@
 </div>
 <div class="page_xypj">
      <div id="chengli">
-        <p style="font-weight: bold; margin-bottom: 20px;font-size: 30px;">沈阳工业大学承办辽宁省软件产业校企联盟产学合作高峰论坛</p>	
-        <p style="font-size: 10px; margin-bottom: 30px;">2017-06-30
+        <p style="font-weight: bold; margin-bottom: 20px;font-size: 30px;">直播课堂 | 迅速提升CSS3动画技术，教你制作程序员专属圣诞贺卡</p>	
+        <p style="font-size: 10px; margin-bottom: 30px;">2017-12-19
         </p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/qiyehd20.jpg"/></p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/qiyehd21.jpg"/></p>
         <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">近日，辽宁省软件产业校企联盟产学合作高峰论坛暨第一届理事会第二次会议于中国软交会期间成功举办。沈阳工业大学与东软睿道教育公司承办本次论坛，来自省内高校和企业的近百人参加论坛，共同探讨产学合作深度融合。论坛主持人由校企联盟秘书长、沈阳工业大学软件学院院长牛连强担任。他向与会嘉宾介绍了辽宁省软件产业校企联盟的成立初衷。辽宁省软件产业校企联盟是由辽宁省政府主导，以促进校企深度合作、创新发展为主要任务，学校、企业、园区和科研院所共同参与建设的省级公益平台。</p>
-        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/xinwen6.jpg"/></p>
-        <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">校企联盟理事长、沈阳工业大学副校长袁晓光在论坛致辞中表示：我国当下正处在由人力资源大国向人力资源强国转变，由教育大国向教育强国转变的关键时期，如何实现各方资源的有效互补，共同致力于为行业培养、输送更多与经济、产业发展相适应的高质量人才显得至关重要。辽宁软件产业联盟充当了高校与企业间的桥梁，以“合作、创新、共赢、发展”为宗旨，打造“政产学研创”合作多赢的协同创新发展平台，促进企业与高校在人才链、产业链和创新创业链的深度融合。</p>
-	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">辽宁工程技术大学软件学院院长刘万军，大连交通大学软件学院院长黄明，东软控股副总裁、东软睿道总裁李印杲，中软国际教育集团COO李佳历分别发表讲话。</p>
-        <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">论坛结束后，辽宁软件产业校企联盟召开了第一届理事会第二次会议。会议选举并组成了联盟第一届专家委员会。辽宁省软件产业校企联盟将积极携手高校和企业，共同探索产学合作协同育人的新模式、新思想和新途径。</p>
+	text-indent: 2em;">在圣诞贺卡项目中，我们可以掌握HTML的基本概念，CSS样式、布局、2D转换，动画，以及JavaScript的基本概念；可以深入理解行级元素和块级元素，盒子模型，定位等重要知识点；可以学习到水平居中，垂直居中，背景图适配容器大小的小技巧。</p>
+	<p style="margin-bottom: 20px;"><img style=" width: 50%;" src="img/xinwen/qiyehd22.jpg"/></p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">在编写第一页面时，我们使用了行级元素和块级元素的转换，使用了盒子模型来控制元素和元素的间距，使用了CSS 2D旋转和动画来实现旋转的小鹿。</p>
+	<p style="margin-bottom: 20px;"><img style=" width: 50%;" src="img/xinwen/qiyehd23.jpg"/></p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">在编写第二个页面时，我们使用到了定位来控制图片在页面上的位置，使用到了动画来实现图片的移动，旋转和放大缩小。</p>
+	 <p style="margin-bottom: 20px;"><img style=" width: 50%;" src="img/xinwen/qiyehd24.jpg"/></p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">以上充满技术含量的圣诞贺卡你心动了吗</p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">通过实战演练，hold住技术要点</p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">如果你有任何关于IT技术问题想要咨询</p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">请添加东软睿道官方QQ群：607021413</p>
+	 <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">我们一众技术大咖都在里面哦~</p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/qiyehd25.jpg"/></p>
+         <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/qiyehd26.jpg"/></p>
 	 </div>
 </div>    
 </div>
