--- a/xqlmyaowen.html
+++ b/xqlmyaowen.html
@@ -62,9 +62,9 @@
     </p>
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
-<li class=""><a href="xqlmyaowen.html" target="_blank">要闻</a></li>
-<li class=""><a href="xqlmzhengce.html" target="_blank">政策</a></li>                
-<li class=""><a href="xqlmhuiyi.html" target="_blank">会议活动</a></li>				
+<li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
+<li class=""><a href="xqlmzhengce.html" target="_blank">企业学校动态</a></li>                
+<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>					
 </ul>
 </div>
 
@@ -72,7 +72,7 @@
 </div>
 <div class="page_xypj">
      <div class="xypj_list">
-        <div class="xypj_list-tit"><span><style></style>要闻</span></div>
+        <div class="xypj_list-tit"><span><style></style>政策要闻</span></div>
          <div class="xypj_list-nr"><style>
 	 
 	
@@ -120,10 +120,10 @@
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-29 </td></tr><tr height="32">
 <td height="32"><span class="leaderfont">· </span><a class="c" title="标题：全省高校组织部长学习贯彻党的十九大精神论坛在沈阳举行" href="yaowen2.html" target="_blank">全省高校组织部长学习贯彻党的十九大精神论坛在沈阳举行 </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-12-06 </td></tr><tr height="32">
-<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：2017辽宁省软件产业校企联盟专场招聘会" href="yaowen3.html" target="_blank">2017辽宁省软件产业校企联盟专场招聘会 </a></td>
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：国务院办公厅关于深化产教融合的若干意见..." href="yaowen3.html" target="_blank">国务院办公厅关于深化产教融合的若干意见... </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-12-09 </td></tr><tr height="32">
-<!--<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：信息技术新工科产学研联盟第一届理事会组成名单" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab0015ffc15393403ea&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">信息技术新工科产学研联盟第一届理事会组成名单 </a></td>
-<td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-24 </td>--></tr></tbody></table>
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：人工智能产业刚刚国家又出新扶持政策..." href="yaowen4.html" target="_blank">人工智能产业刚刚国家又出新扶持政策... </a></td>
+<td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-24 </td></tr></tbody></table>
  </div>  
 </div>    
 </div>
