--- a/xqlmzhengce.html
+++ b/xqlmzhengce.html
@@ -62,9 +62,9 @@
     </p>
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
-<li class=""><a href="xqlmyaowen.html" target="_blank">要闻</a></li>
-<li class=""><a href="xqlmzhengce.html" target="_blank">政策</a></li>                
-<li class=""><a href="xqlmhuiyi.html" target="_blank">会议活动</a></li>				
+<li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
+<li class=""><a href="xqlmzhengce.html" target="_blank">企业学校动态</a></li>                
+<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>					
 </ul>
 </div>
 
@@ -72,7 +72,7 @@
 </div>
 <div class="page_xypj">
      <div class="xypj_list">
-        <div class="xypj_list-tit"><span><style></style>政策</span></div>
+        <div class="xypj_list-tit"><span><style></style>企业学校动态</span></div>
          <div class="xypj_list-nr"><style>
 	 
 	
@@ -116,14 +116,14 @@
 }
 		
  </style><table width="100%" class="winstyle1253"><tbody><tr height="32">
-<!--<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：关于举办信息技术新工科产学研联盟第一届年会暨信息技术领域产学合作论坛的通知" href="tongzhi1.html" target="_blank">辽宁省软件产业校企联盟在沈阳工业大学成立... </a></td>
-<td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-6-1 </td></tr><tr height="32">-->
-<!--<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：欢迎广大高校和信息技术领域企业加入“信息技术新工科产学研联盟”" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab00160248eb42f0488&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">欢迎广大高校和信息技术领域企业加入“信息技术新工科产学研联盟” </a></td>
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：《无人驾驶不是梦》完整版来了！央视给东软睿驰拍了一部专题片" href="qiyehuodong1.html" target="_blank">《无人驾驶不是梦》完整版来了！央视给东软睿驰拍了一部专题片...</a></td>
+<td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-06-01 </td></tr><tr height="32">
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：直播课堂 | 6堂实战课，快速提升Web前端技术..." href="qiyehuodong2.html" target="_blank">直播课堂 | 6堂实战课，快速提升Web前端技术... </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-12-05 </td></tr><tr height="32">
-<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：信息技术新工科产学研联盟第一届理事会成立会议通知" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab0015ffbff387003cc&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">信息技术新工科产学研联盟第一届理事会成立会议通知 </a></td>
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：直播课堂 | 迅速提升CSS3动画技术，教你制作程序员专属圣诞贺卡..." href="qiyehuodong3.html" target="_blank">直播课堂 | 迅速提升CSS3动画技术，教你制作程序员专属圣诞贺卡... </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-27 </td></tr><tr height="32">
-<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：信息技术新工科产学研联盟第一届理事会组成名单" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab0015ffc15393403ea&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">信息技术新工科产学研联盟第一届理事会组成名单 </a></td>
-<td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-24 </td>--></tr></tbody></table>
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：东北大学软件学院学生党总支举行学习十九大精神系列活动" href="xuexiaohuodong1.html" target="_blank">东北大学软件学院学生党总支举行学习十九大精神系列活动... </a></td>
+<td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-24 </td></tr></tbody></table>
  </div>  
 </div>    
 </div>
