--- a/xqlmhuiyi.html
+++ b/xqlmhuiyi.html
@@ -62,9 +62,9 @@
     </p>
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
-<li class=""><a href="xqlmyaowen.html" target="_blank">要闻</a></li>
-<li class=""><a href="xqlmzhengce.html" target="_blank">政策</a></li>                
-<li class=""><a href="xqlmhuiyi.html" target="_blank">会议活动</a></li>				
+<li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
+<li class=""><a href="xqlmzhengce.html" target="_blank">企业学校动态</a></li>                
+<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>				
 </ul>
 </div>
 
@@ -72,7 +72,7 @@
 </div>
 <div class="page_xypj">
      <div class="xypj_list">
-        <div class="xypj_list-tit"><span><style></style>会议活动</span></div>
+        <div class="xypj_list-tit"><span><style></style>会议论坛</span></div>
          <div class="xypj_list-nr"><style>
 	 
 	
@@ -120,9 +120,9 @@
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-6-30 </td></tr><tr height="32">
 <td height="32"><span class="leaderfont">· </span><a class="c" title="标题：辽宁省软件产业校企联盟产学合作协同育人高峰论坛... " href="huiyi2.html" target="_blank">辽宁省软件产业校企联盟产学合作协同育人高峰论坛... </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-6-19 </td></tr><tr height="32">
-<!--<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：信息技术新工科产学研联盟第一届理事会成立会议通知" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab0015ffbff387003cc&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">信息技术新工科产学研联盟第一届理事会成立会议通知 </a></td>
+<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：2017辽宁省软件产业校企联盟专场招聘会... " href="huiyi3.html" target="_blank">2017辽宁省软件产业校企联盟专场招聘会...  </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-27 </td></tr><tr height="32">
-<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：信息技术新工科产学研联盟第一届理事会组成名单" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab0015ffc15393403ea&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">信息技术新工科产学研联盟第一届理事会组成名单 </a></td>
+<!--<td height="32"><span class="leaderfont">· </span><a class="c" title="标题：信息技术新工科产学研联盟第一届理事会组成名单" href="http://xgk.csia.org.cn/content.jsp?id=8a9e2bad5f7d5ab0015ffc15393403ea&amp;classid=f2e004e0dba648d4ad35ee737b273cf4" target="_blank">信息技术新工科产学研联盟第一届理事会组成名单 </a></td>
 <td class="timestyle" valign="middle" width="1%" nowrap="" align="right">2017-11-24 </td>--></tr></tbody></table>
  </div>  
 </div>    
