--- a/xqlmtongzhi.html
+++ b/xqlmtongzhi.html
@@ -62,9 +62,9 @@
     </p>
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
-<li class=""><a href="xqlmyaowen.html" target="_blank">要闻</a></li>
-<li class=""><a href="xqlmzhengce.html" target="_blank">政策</a></li>                
-<li class=""><a href="xqlmhuiyi.html" target="_blank">会议活动</a></li>				
+<li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
+<li class=""><a href="xqlmzhengce.html" target="_blank">企业学校动态</a></li>                
+<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>				
 </ul>
 </div>
 
