--- a/xuexiaohuodong1.html
+++ b/xuexiaohuodong1.html
@@ -64,7 +64,7 @@
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
 <li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
 <li class=""><a href="xqlmzhengce.html" target="_blank">企业学校动态</a></li>                
-<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>				
+<li class=""><a href="xqlmhuiyi.html" target="_blank">会议论坛</a></li>			
 </ul>
 </div>
 
@@ -72,18 +72,18 @@
 </div>
 <div class="page_xypj">
      <div id="chengli">
-        <p style="font-weight: bold; margin-bottom: 20px;font-size: 30px;">沈阳工业大学承办辽宁省软件产业校企联盟产学合作高峰论坛</p>	
-        <p style="font-size: 10px; margin-bottom: 30px;">2017-06-30
+        <p style="font-weight: bold; margin-bottom: 20px;font-size: 30px;">东北大学软件学院学生党总支举行学习十九大精神系列活动</p>	
+        <p style="font-size: 10px; margin-bottom: 30px;">作者：李奇 时间：2017-11-29 点击数：75 字号：大 中 小
         </p>
         <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">近日，辽宁省软件产业校企联盟产学合作高峰论坛暨第一届理事会第二次会议于中国软交会期间成功举办。沈阳工业大学与东软睿道教育公司承办本次论坛，来自省内高校和企业的近百人参加论坛，共同探讨产学合作深度融合。论坛主持人由校企联盟秘书长、沈阳工业大学软件学院院长牛连强担任。他向与会嘉宾介绍了辽宁省软件产业校企联盟的成立初衷。辽宁省软件产业校企联盟是由辽宁省政府主导，以促进校企深度合作、创新发展为主要任务，学校、企业、园区和科研院所共同参与建设的省级公益平台。</p>
-        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/xinwen6.jpg"/></p>
-        <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">校企联盟理事长、沈阳工业大学副校长袁晓光在论坛致辞中表示：我国当下正处在由人力资源大国向人力资源强国转变，由教育大国向教育强国转变的关键时期，如何实现各方资源的有效互补，共同致力于为行业培养、输送更多与经济、产业发展相适应的高质量人才显得至关重要。辽宁软件产业联盟充当了高校与企业间的桥梁，以“合作、创新、共赢、发展”为宗旨，打造“政产学研创”合作多赢的协同创新发展平台，促进企业与高校在人才链、产业链和创新创业链的深度融合。</p>
-	<p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">辽宁工程技术大学软件学院院长刘万军，大连交通大学软件学院院长黄明，东软控股副总裁、东软睿道总裁李印杲，中软国际教育集团COO李佳历分别发表讲话。</p>
-        <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
-	text-indent: 2em;">论坛结束后，辽宁软件产业校企联盟召开了第一届理事会第二次会议。会议选举并组成了联盟第一届专家委员会。辽宁省软件产业校企联盟将积极携手高校和企业，共同探索产学合作协同育人的新模式、新思想和新途径。</p>
+	text-indent: 2em;">软件学院学生党总支认真贯彻落实学院党委的要求，针对学生党支部书记、全体学生党员以“抓关键、育全体”的思路开展不同层次的学习十九大精神活动，在全体学生党员中掀起学习十九大精神的热潮。</p>
+	  <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">11月27日晚20点，软件学院学生党总支在软件学院党员之家举行学生党支部书记学习十九大精神研读交流会，学生党总支委员、学生办主任李奇主持交流会，全体学生党支部书记参加交流会。交流会认真研读了《党的十九大报告学习辅导百问》的《深入学习贯彻习近平新时代中国特色社会主义思想》、《开启新时代 踏上新征程》、《开启全面建设社会主义现代国家新征程》、《全面理解和准确把握新时代党的建设总要求》、《全面把握中国特色社会主义进入新时代》、《推动构建人类命运共同体》等文章，每名支部书记负责讲解一篇文章，并交流自己的研读体会。支部书记研读交流会加强了支部书记的理论水平，使学生党员中的关键少数的思想认识得到进一步提高。</p>
+	  <p style="font-size: 20px;margin-bottom: 20px;text-align: left;line-height: 1.5;
+	text-indent: 2em;">11月28日晚18点30分，软件学院学生党总支举行学生党员学习十九大精神报告会，马克思主义学院任鹏副教授作“新时代&middot;新思想&middot;新目标&middot;新作为”主题报告，软件学院党委副书记兼副院长刘春风、学生办党支部全体党员、全体学生党员参加了报告会。报告会首先举行了重温入党誓词，刘春风副书记带领全体党员一起重温了入党誓词，让全体党员不忘初心，牢记使命。任鹏副教授从十九大基本情况、十九大报告的主体框架、十九大报告的七大亮点、如何贯彻十九大精神四个方面全面讲解了十九大精神。报告会最后，刘春风副书记作了总结讲话，他要求全体党员要认真学习深刻领会十九大报告精神，要坚定理想信念，志存高远，脚踏实地，勇做新时代的弄潮儿。
+</p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/xxhd1.jpg"/></p>
+        <p style="margin-bottom: 20px;"><img style=" width: 100%;" src="img/xinwen/xxhd2.jpg"/></p>
 	 </div>
 </div>    
 </div>
