--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0023)http://xgk.csia.org.cn/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -20,7 +20,7 @@
 
 
 <div class="logo">
-<div class="wzm" style="width:370px; height:126px; float:left;"><img src="img\logo.png" height="126px" width="500px"></div>
+<div class="wzm" style="width:45%; height:126px; float:left;position: absolute;top:0px;left:15%;"><img src="img\logo.png" height="126px" width="100%"></div>
 <div class="soso" style="width:314px"><style>
  
 
@@ -56,7 +56,7 @@
 <div class="dh">
 <div id="nav">
 <ul>
-<li class="nav_li0"><a href="xiaoqilianmeng.html" target="_blank">首页</a></li>
+<li class="nav_li0"><a href="index.html" target="_blank">首页</a></li>
 <li class=""><a href="xqlmjianjie.html" target="_blank">组织机构</a>
     <p style="display: none;">
         <a href="xqlmzhangcheng.html" target="_blank">联盟章程</a>					
@@ -171,7 +171,7 @@
             </div>
             
             <div class="zcfg" style="margin-top:20px;">
-            	<div class="zcfg-tit"><span>企业学校动态</span><a href="xqlmzhengce.html" target="_blank">More+</a></div>
+            	<div class="zcfg-tit"><span>联盟动态</span><a href="xqlmzhengce.html" target="_blank">More+</a></div>
                 <div class="zcfg-nr"><style>
 	 
 	
@@ -386,10 +386,8 @@
         		<div class="lmgx9">
         		<img class="i3"src="img\qiye\zhongruanguoji.jpg"/>
         	</div>
+        	
         	<div class="lmgx10">
-        		<img class="i3"src="img\qiye\zhongruan.jpg"/>
-        	</div>
-        	<div class="lmgx11">
         		<img class="i3"src="img\qiye\zhongkexin.jpg"/>
         	</div>
         </div>
