--- a/xqlmzhengce.html
+++ b/xqlmzhengce.html
@@ -19,7 +19,7 @@
 
 
 <div class="logo">
-<div class="wzm" style="width:370px; height:126px; float:left;"><img src="img\logo.png" height="126px" width="660px"></div>
+<div class="wzm" style="width:45%; height:126px; float:left;position: absolute;top:0px;left:15%;"><img src="img\logo.png" height="126px" width="100%"></div>
 <div class="soso" style="width:314px"><style>
  
 
@@ -72,7 +72,7 @@
 </div>
 <div class="page_xypj">
      <div class="xypj_list">
-        <div class="xypj_list-tit"><span><style></style>企业学校动态</span></div>
+        <div class="xypj_list-tit"><span><style></style>联盟动态</span></div>
          <div class="xypj_list-nr"><style>
 	 
 	
