--- a/qiyehuodong3.html
+++ b/qiyehuodong3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0023)http://xgk.csia.org.cn/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -55,7 +55,7 @@
 <div class="dh">
 <div id="nav">
 <ul>
-<li class="nav_li0"><a href="xiaoqilianmeng.html" target="_blank">首页</a></li>
+<li class="nav_li0"><a href="index.html" target="_blank">首页</a></li>
 <li class=""><a href="xqlmjianjie.html" target="_blank">组织机构</a>
     <p style="display: none;">
        <a href="xqlmzhangcheng.html" target="_blank">联盟章程</a>							
