--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- saved from url=(0023)http://xgk.csia.org.cn/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>辽宁省软件企业校企联盟</title>
+<title>辽宁省软件产业校企联盟</title>
 <link href="css/xgklm.css" type="text/css" rel="stylesheet">
 <!--<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">-->
 <script src="js/jquery-1.8.3.min.js"></script>
