--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <ul>
 <li class="nav_li0"><a href="index.html" target="_blank">首页</a></li>
 <li class=""><a href="xqlmjianjie.html" target="_blank">组织机构</a>
-    <p style="display: none;">
+   <!-- <p style="display: none;">
         <a href="xqlmzhangcheng.html" target="_blank">联盟章程</a>					
-    </p>
+    </p>-->
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
 <li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
