--- a/xqlmzhengce.html
+++ b/xqlmzhengce.html
@@ -57,9 +57,9 @@
 <ul>
 <li class="nav_li0"><a href="index.html" target="_blank">首页</a></li>
 <li class=""><a href="xqlmjianjie.html" target="_blank">组织机构</a>
-    <p style="display: none;">
+    <!-- <p style="display: none;">
         <a href="xqlmzhangcheng.html" target="_blank">联盟章程</a>					
-    </p>
+    </p>-->
 </li>
 <li class=""><a href="xqlmtongzhi.html" target="_blank">通知公告</a></li>
 <li class=""><a href="xqlmyaowen.html" target="_blank">政策要闻</a></li>
@@ -134,11 +134,11 @@
         		<a id="weiyel1"href=""target="_blank">相关链接</a>
         		<a class="weiyel"href=""target="_blank">法律声明</a>
         		<a class="weiyel"href=""target="_blank">下载中心</a>
-        		<img id="weiyeli" src="img/ewm.png"/>
-        		<a id="weiyel2"href=""target="_blank">关于我们</a>
+        		
+        		<a class="weiyel"href=""target="_blank">关于我们</a>
         		<a class="weiyel"href=""target="_blank">帮助中心</a>
         		<a class="weiyel"href=""target="_blank">投诉意见</a>
          		</p>
         	</div>
-        </div>
+</div>
 </body></html>
